recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:7: error: recursive variable min needs type
  var min = min(l.tail);
            ^